<resources>
	<string name="app_name">Workup</string>

	<string name="teacher_title_section1">קבוצות</string>
	<string name="teacher_title_section2">קבוצה חדשה</string>
	<string name="teacher_title_section3">הוסף תלמידים</string>
	<string name="teacher_title_section4">מערכת שעות</string>
	<string name="teacher_title_section5">משימה חדשה</string>
	<string name="teacher_title_section6">סטטיסטיקה</string>
	<string name="teacher_title_section7">הוסף ציון</string>

	<string name="student_title_section1">משימות</string>
	<string name="student_title_section2">ציונים</string>
	<string name="student_title_section3">מערכת שעות</string>


	<string name="teacher_menu_1">רשימת קבוצות</string>
	<string name="teacher_menu_2">הוסף קבוצה חדשה</string>
	<string name="teacher_menu_3">הוסף תלמידים לקבוצה</string>
	<string name="teacher_menu_4">מערכת שעות</string>
	<string name="teacher_menu_5">הוסף משימה</string>
	<string name="teacher_menu_6">הערכת משימות</string>
	<string name="teacher_menu_7">הוספת ציונים</string>

	<string name="student_menu_1">עבודות ומבחנים</string>
	<string name="student_menu_2">גליון ציונים</string>
	<string name="student_menu_3">מערכת שעות</string>


	<string name="day_1">ראשון</string>
	<string name="day_2">שני</string>
	<string name="day_3">שלישי</string>
	<string name="day_4">רביעי</string>
	<string name="day_5">חמישי</string>
	<string name="day_6">שישי</string>
	<string name="day_7">שבת</string>

	<string name="month_1">ינואר</string>
	<string name="month_2">פברואר</string>
	<string name="month_3">מרץ</string>
	<string name="month_4">אפריל</string>
	<string name="month_5">מאי</string>
	<string name="month_6">יוני</string>
	<string name="month_7">יולי</string>
	<string name="month_8">אוגוסט</string>
	<string name="month_9">ספטמבר</string>
	<string name="month_10">אוקטובר</string>
	<string name="month_11">נובמבר</string>
	<string name="month_12">דצמבר</string>

	<string name="in">ב</string>
	<string name="to">ל</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_example">  </string>
	<string name="action_settings">Settings</string>


	<string name="title_activity_graph">גרף</string>
	<string name="title_activity_registration">הרשמה</string>
	<string name="title_activity_registration_details">הרשמה</string>
	<string name="title_activity_all_grades">ציונים</string>
	<string name="title_activity_lessons_table">מערכת שעות</string>
	<string name="title_activity_add_group">הוספת קבוצה</string>
	<string name="title_activity_add_task">הוספת משימה</string>
	<string name="title_activity_teacher_main">רשימת קבוצות</string>
	<string name="title_activity_lessons_table_activity_teacher">מערכת שעות</string>
	<string name="title_activity_add_grade">הוספת ציונים</string>

	<string name="title_section1">משימות</string>
	<string name="title_section2">ציונים</string>
	<string name="title_section3">מערכת שעות</string>




	<!-- CHANGE DIS -->
	<string name="loading_groups">טוען...</string>
	<string name="loading_students">טוען...</string>
	<string name="loading_tasks">טוען...</string>
	<string name="loading_grades">טוען...</string>
	<string name="loading_timetable">טוען...</string>
	<string name="loading_comments">טוען...</string>
	<string name="loading_group_info">טוען...</string>
	<string name="loading_data">טוען...</string>
	<string name="loading_graph_data">טוען...</string>
	<string name="wait">טוען...</string>

	<string name="sending_feedback">מסיים משימה...</string>
	<string name="comments_title">תגובות</string>
	<string name="task_description_title">תיאור: </string>
	<string name="add_class_title">הוסף שיעור</string>
	<string name="select_time_title">בחר זמן</string>
	<string name="delete_group_question">למחוק קבוצה?</string>
	<string name="group_info_title">מידע על הקבוצה </string>
	<string name="students_title">תלמידים:</string>
	<string name="teachers_title">מורים:</string>
	<string name="select_group_first">קודם בחר קבוצה</string>
	<string name="select_task">בחר משימה בקבוצה</string>
	<string name="add_students_to_class">הוסף תלמידים לקבוצה</string>
	<string name="add_to_group">הוסף</string>

	<string name="adding_class">מוסיף שיעור...</string>
	<string name="adding_task">מוסיף משימה...</string>
	<string name="adding_student">מוסיף תלמיד...</string>
	<string name="signing_student_up">רושם תלמיד...</string>
	<string name="adding_students_to_groups">מוסיף תלמידים...</string>
	<string name="adding_group">יוצר קבוצה...</string>
	<string name="adding_grade">מוסיף ציון...</string>
	<string name="deleting_group">מוחק קבוצה...</string>

	<string name="added_task">משימה הוספה בהצלחה!</string>
	<string name="added_class">שיעור הוסף בהצלחה!</string>
	<string name="added_grade">ציון הוסף בהצלחה!</string>
	<string name="added_group">קבוצה הוספה בהצלחה!</string>
	<string name="added_student">תלמיד הוסף</string>
	<string name="signed_student_up">תלמיד הוסף בהצלחה!</string>
	<string name="added_students_to_group">תלמידים הוספו לקבוצה בהצלחה!</string>
	<string name="group_deleted">קבוצה נמחקה בהצלחה!</string>

	<string name="spinner_select_group">בחר קבוצה</string>
	<string name="spinner_select_student">בחר תלמיד</string>

	<string name="select_group_alert">בחר קבוצה</string>
	<string name="select_student_alert">בחר תלמיד</string>
	<string name="enter_exam_description_alert">נושא המבחן</string>
	<string name="enter_grade_alert">הכנס ציון</string>
	<string name="grade_range_alert">הציון חייב להיות בתחום 0-100</string>
	<string name="enter_student_name_alert">הכנס את שם התלמיד</string>
	<string name="enter_student_last_name_alert">הכנס את שם המשפחה של התלמיד</string>
	<string name="enter_group_name_alert">הכנס שם קבוצה</string>
	<string name="enter_at_least_one_number_alert">הכנס לפחות מספר טלפון אחד</string>
	<string name="enter_task_name_alert">הכנס שם למשימה</string>
	<string name="enter_filing_date_alert">הבחר תאריך הגשה</string>
	<string name="enter_phone_registration_alert">הכנס מספר טלפון</string>
	<string name="enter_name_registration_alert">הכנס שם פרטי</string>
	<string name="enter_last_name_registration_alert">הכנס שם משפחה</string>
	<string name="already_registered_student_alert">מספר טלפון זה כבר רשום כתלמיד!</string>
	<string name="already_registered_teacher_alert">מספר טלפון זה רשום כבר כמורה!</string>
	<string name="choose_hour_alert">בחר שעה</string>

	<string name="add_student_title">הוסף תלמיד עם מספר טלפון </string>
	<string name="enter_student_name_for_registration">שם התלמיד</string>
	<string name="enter_student_last_name_for_registration">שם המשפחה</string>

	<string name="hint_comment">תגובה</string>
	<string name="hint_hour">שעה</string>
	<string name="hint_exam_name">שם המבחן</string>
	<string name="hint_grade">ציון</string>
	<string name="hint_enter_group_name">שם הקבוצה</string>
	<string name="hint_enter_phone">מספר טלפון</string>
	<string name="hint_task_title">כותרת</string>
	<string name="hint_task_description">תיאור</string>
	<string name="hint_task_date">תאריך הגשה</string>
	<string name="hint_name">שם</string>
	<string name="hint_last_name">שם משפחה</string>

	<string name="add_student_button_text">הוסף</string>
	<string name="add_group">הוסף קבוצה</string>
	<string name="add_task">הוסף משימה</string>
	<string name="button_text_tasks">משימות</string>
	<string name="button_text_replies">תגובות</string>
	<string name="yes">כן</string>
	<string name="no">לא</string>
	<string name="ok">OK</string>
	<string name="close">סגור</string>
	<string name="cancel">סגור</string>
	<string name="info">!</string>
	<string name="title_activity_comments">תגובות</string>
	<string name="title_no_groups">אין קבוצות</string>
	<string name="students_finished_task">תלמידים סיימו את המשימה</string>
	<string name="info_on_task">מידע על המשימה</string>
	<string name="finisher_name_list">רשימת התלמידים שלא סיימו:</string>
	<string name="add_grade">הוסף ציון</string>

	<string name="notification_added_to_group">הוספת לקבוצה</string>
	<string name="notification_would_you_like_to_stay">האם תרצה להשאר בקבוצה?</string>
	<string name="notification_would_you_like_to_create_a_group">אין לך קבוצות לימוד. האם תרצה להוסיף קבוצה?</string>

	<string name="hello_world">Hello world!</string>
	<string name="title_activity_grades_graph">גרף ציונים</string>

	<string name="teacher">מורה</string>
	<string name="everybody">כולם</string>
	<string name="private_item">פרטי</string>

	<string name="delete_user">מחק משתמש</string>
	<string name="deleting_user">מוחק משתמש...</string>
	<string name="delete_user_confirmation">האם אתה בטוח שתרצה למחוק את המשתמש?</string>

	<string name="push_new_topic">שאלה חדשה</string>
	<string name="push_new_topic_description">שאלה על משימה</string>

	<string name="push_new_reply_by">תגובה על ידי</string>

	<string name="push_new_grade"> ציון חדש </string>
	<string name="push_new_grade_description"> ציון חדש בקבוצה </string>

	<string name="push_new_task"> משימה חדשה </string>
	<string name="push_new_task_description"> משימה חדשה בקבוצה </string>

	<string name="private_in_hebrew">[פרטי]</string>

	<string name="today">היום</string>
	<string name="tomorrow">מחר</string>
	<string name="after_tomorrow">מחרותיים</string>

</resources>
