<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@mipmap/new_user"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.app2youth.hackaton.Workup1.AddGroupActivity$PlaceholderFragment">

	<TextView
		android:id="@+id/title_new"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:focusable="true"
		android:text="הוספת קבוצה"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="#ffffffff"
		android:textSize="40dp" />


	<EditText
		android:id="@+id/groupName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/title_new"
		android:layout_alignStart="@+id/title_new"
		android:layout_above="@+id/add_phone"
		android:layout_marginBottom="60dp"
		android:layout_marginTop="85dp"
		android:ems="10"
		android:hint="@string/hint_enter_group_name"
		android:inputType="textPersonName" />

	<EditText
		android:id="@+id/add_phone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_centerVertical="true"
		android:layout_marginBottom="15dp"
		android:layout_marginRight="5dp"
		android:layout_marginLeft="50dp"
		android:ems="10"
		android:hint="@string/hint_enter_phone"
		android:inputType="phone" />

	<Button
		android:id="@+id/button"
		style="?android:attr/buttonStyleSmall"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/add_phone"
		android:layout_toEndOf="@+id/add_phone"
		android:layout_toRightOf="@+id/add_phone"
		android:onClick="addStudentButton"
		android:text="@string/add_student_button_text" />

	<TextView
		android:id="@+id/phone_list"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/add_group_button"
		android:layout_alignEnd="@+id/button"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignRight="@+id/button"
		android:layout_below="@+id/add_phone"
		android:text="" />

	<ImageView
		android:id="@+id/add_group_button"
		android:layout_width="wrap_content"
		android:layout_height="115dp"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="15dp"
		android:onClick="addGroupButton"
		android:src="@mipmap/creat_group" />

</RelativeLayout>
