<RelativeLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@mipmap/new_user"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:fillViewport="true" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:focusableInTouchMode="true"
	android:focusable="true"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.app2youth.hackaton.Workup1.AddTaskActivity$PlaceholderFragment">

	<TextView
		android:id="@+id/title_new"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="-3dp"
		android:focusable="true"
		android:text="הוספת מטלה"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="#ffffffff"
		android:textSize="40dp" />


	<Spinner
		android:id="@+id/groupSpinner"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/title_new"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="60dp" />

	<EditText
		android:id="@+id/taskName"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="25dp"
		android:layout_below="@id/groupSpinner"
		android:hint="@string/hint_task_title"
		android:inputType="textPersonName"
		android:ems="10"
		android:textAlignment="center"/>

	<EditText
		android:id="@+id/taskDescription"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="25dp"
		android:layout_below="@id/taskName"
		android:hint="@string/hint_task_description"
		android:inputType="textPersonName"
		android:textAlignment="center" />

	<EditText
		android:id="@+id/filingDate"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="25dp"
		android:layout_below="@id/taskDescription"
		android:onClick="openDateDialog"
		android:hint="@string/hint_task_date"
		android:inputType="date"
		android:focusable="false" />

	<ImageView
		android:id="@+id/addTask"
		android:layout_width="wrap_content"
		android:layout_height="115dp"

		android:layout_centerHorizontal="true"
		android:layout_marginTop="15dp"
		android:layout_below="@id/filingDate"
		android:onClick="createTask"
		android:src="@mipmap/add_task" />



	<!--
	<Spinner
		android:id="@+id/groupSpinner"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/title_new"
		android:layout_alignStart="@+id/title_new"
		android:layout_above="@+id/taskName"
		android:layout_marginBottom="20dp"
		android:layout_marginTop="100dp"
		android:layout_centerHorizontal="true" />

	<EditText
		android:id="@+id/taskName"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginRight="5dp"
		android:layout_marginLeft="50dp"
		android:layout_above="@+id/taskDescription"
		android:hint="@string/hint_task_title"
		android:inputType="textPersonName"
		android:ems="10" />

	<EditText
		android:id="@+id/taskDescription"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="25dp"
		android:layout_above="@+id/filingDate"
		android:hint="@string/hint_task_description"
		android:inputType="textPersonName"
		android:textAlignment="center" />

	<EditText
		android:id="@+id/filingDate"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="25dp"
		android:layout_above="@+id/addTask"
		android:onClick="openDateDialog"
		android:hint="@string/hint_task_date"
		android:inputType="date"
		android:focusable="false"
		android:ems="10" />

	<ImageView
		android:id="@+id/addTask"
		android:layout_width="wrap_content"
		android:layout_height="115dp"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="15dp"
		android:onClick="createTask"
		android:src="@mipmap/add_task" />
	-->

</RelativeLayout>
</ScrollView>
</RelativeLayout>